Update events section

--- a/index.html
+++ b/index.html
@@ -6,42 +6,42 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <link rel="canonical" href="https://chachealdeskuido.com">
     <title>CHACHE - Artista Flamenco Urbano</title>
-	
-	<!-- SEO Básico -->
-	<title>CHACHE - Artista Flamenco Urbano | Música, Eventos y Videoclips</title>
-	<meta name="description" content="Descubre a CHACHE, artista flamenco urbano y ex Aldeskuido. Escucha sus últimos lanzamientos, mira sus videoclips y síguelo en redes.">
-	<meta name="keywords" content="CHACHE, Aldeskuido, flamenco urbano, música flamenca, artista español, rumba, videoclip, conciertos, Spotify, YouTube">
-	<meta name="author" content="CHACHE - FUGA DE FLAMENCOS S.L.">
 
-	<!-- Open Graph / Facebook -->
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="CHACHE - Artista Flamenco Urbano">
-	<meta property="og:description" content="Conoce a CHACHE, su carrera, sus últimos temas y próximos eventos.">
-	<meta property="og:image" content="images/chache-bio.jpg">
-	<meta property="og:url" content="https://chachealdeskuido.com">
-	<meta property="og:site_name" content="CHACHE Oficial">
+    <!-- SEO Básico -->
+    <title>CHACHE - Artista Flamenco Urbano | Música, Eventos y Videoclips</title>
+    <meta name="description" content="Descubre a CHACHE, artista flamenco urbano y ex Aldeskuido. Escucha sus últimos lanzamientos, mira sus videoclips y síguelo en redes.">
+    <meta name="keywords" content="CHACHE, Aldeskuido, flamenco urbano, música flamenca, artista español, rumba, videoclip, conciertos, Spotify, YouTube">
+    <meta name="author" content="CHACHE - FUGA DE FLAMENCOS S.L.">
 
-	<!-- Twitter Cards -->
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="CHACHE - Artista Flamenco Urbano">
-	<meta name="twitter:description" content="Música flamenca urbana con esencia callejera y sonido mestizo.">
-	<meta name="twitter:image" content="images/chache-bio.jpg">
-	<meta name="twitter:site" content="@chacheoficial">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="CHACHE - Artista Flamenco Urbano">
+    <meta property="og:description" content="Conoce a CHACHE, su carrera, sus últimos temas y próximos eventos.">
+    <meta property="og:image" content="images/chache-bio.jpg">
+    <meta property="og:url" content="https://chachealdeskuido.com">
+    <meta property="og:site_name" content="CHACHE Oficial">
 
-	<!-- Preconnect y DNS Prefetch -->
-	<link rel="dns-prefetch" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-	<link rel="dns-prefetch" href="https://fonts.gstatic.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="dns-prefetch" href="https://cdn.ampproject.org">
-	<link rel="preconnect" href="https://cdn.ampproject.org" crossorigin>
-	<link rel="dns-prefetch" href="https://use.fontawesome.com">
-	<link rel="preconnect" href="https://use.fontawesome.com" crossorigin>
-	<link rel="dns-prefetch" href="https://open.spotify.com">
-	<link rel="preconnect" href="https://open.spotify.com" crossorigin>
-	<link rel="dns-prefetch" href="https://i.scdn.co">
-	<link rel="preconnect" href="https://i.scdn.co" crossorigin>
-	
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="CHACHE - Artista Flamenco Urbano">
+    <meta name="twitter:description" content="Música flamenca urbana con esencia callejera y sonido mestizo.">
+    <meta name="twitter:image" content="images/chache-bio.jpg">
+    <meta name="twitter:site" content="@chacheoficial">
+
+    <!-- Preconnect y DNS Prefetch -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="https://cdn.ampproject.org">
+    <link rel="preconnect" href="https://cdn.ampproject.org" crossorigin>
+    <link rel="dns-prefetch" href="https://use.fontawesome.com">
+    <link rel="preconnect" href="https://use.fontawesome.com" crossorigin>
+    <link rel="dns-prefetch" href="https://open.spotify.com">
+    <link rel="preconnect" href="https://open.spotify.com" crossorigin>
+    <link rel="dns-prefetch" href="https://i.scdn.co">
+    <link rel="preconnect" href="https://i.scdn.co" crossorigin>
+
     <!-- Materialize CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -580,15 +580,15 @@
                 flex-direction: column;
             }
 
-			.lanzamientos-media,
-			.lanzamientos-list {
-			  max-width: 100% !important;
-			  width: 100% !important;
-			}
+            .lanzamientos-media,
+            .lanzamientos-list {
+                max-width: 100% !important;
+                width: 100% !important;
+            }
 
-			.lanzamientos-list {
-			  padding: 0 1rem;
-			}
+            .lanzamientos-list {
+                padding: 0 1rem;
+            }
 
             .lanzamiento-card {
                 flex-direction: row;
@@ -693,18 +693,21 @@
         </div>
     </section>
 
-
-
+    <!-- Eventos con carrusel automático -->
     <section id="events" class="section">
         <h2 class="titulo-estilo">⭐ Eventos</h2>
-        <amp-carousel width="1100" height="120" layout="responsive" type="slides" controls>
-            <div class="card-panel hoverable">
-                <h5>Solo a Veces</h5>
-                <p>🎧 Single · 3:00 min · Flamenco<br>📅 25 abril 2025 · 🎤 Beatclap Music (licencia CHACHE)</p>
+        <amp-carousel width="1100" height="120" layout="responsive" type="slides" autoplay delay="5000" loop controls>
+            <div class="card-panel hoverable" style="text-align: center;">
+                <h5>1ª Romería de la Virgen del Pinar de Villariche</h5>
+                <p>📍 Numancia de la Sagra<br>📅 14 Junio 2025 · 🎤 Actuación principal</p>
             </div>
-            <div class="card-panel hoverable">
-                <h5>Solo a Veces</h5>
-                <p>🎧 Single · 3:00 min · Flamenco<br>📅 25 abril 2025 · 🎤 Beatclap Music (licencia CHACHE)</p>
+            <div class="card-panel hoverable" style="text-align: center;">
+                <h5>C.C Martín Rumbero</h5>
+                <p>📍 Carriches (Toledo)<br>📅 17 Mayo 2025 · 🎤 Actuación principal</p>
+            </div>
+            <div class="card-panel hoverable" style="text-align: center;">
+                <h5>De Tardeo</h5>
+                <p>📍 Cíjara (Badajoz)<br>📅 17 Abril 2025 · 🎤 Actuación principal</p>
             </div>
         </amp-carousel>
     </section>
