--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>CHACHE - Artista Flamenco Urbano</title>
 
     <!-- SEO Básico -->
-    <title>CHACHE - Artista Flamenco Urbano | Música, Eventos y Videoclips</title>
+    <title>CHACHE - Artista Flamenco Urbano | Contrataciones, Música y Videoclips</title>
     <meta name="description" content="Descubre a CHACHE, artista flamenco urbano y ex Aldeskuido. Escucha sus últimos lanzamientos, mira sus videoclips y síguelo en redes.">
     <meta name="keywords" content="CHACHE, Aldeskuido, flamenco urbano, música flamenca, artista español, rumba, videoclip, conciertos, Spotify, YouTube">
     <meta name="author" content="CHACHE - FUGA DE FLAMENCOS S.L.">
@@ -698,16 +698,16 @@
         <h2 class="titulo-estilo">⭐ Eventos</h2>
         <amp-carousel width="1100" height="120" layout="responsive" type="slides" autoplay delay="5000" loop controls>
             <div class="card-panel hoverable" style="text-align: center;">
-                <h5>1ª Romería de la Virgen del Pinar de Villariche</h5>
-                <p>📍 Numancia de la Sagra<br>📅 14 Junio 2025 · 🎤 Actuación principal</p>
+                <h4>1ª Romería de la Virgen del Pinar de Villariche</h4>
+                <h5>📅 14 Junio 2025<br>📍 Numancia de la Sagra</h5>
             </div>
             <div class="card-panel hoverable" style="text-align: center;">
-                <h5>C.C Martín Rumbero</h5>
-                <p>📍 Carriches (Toledo)<br>📅 17 Mayo 2025 · 🎤 Actuación principal</p>
+                <h4>C.C Martín Rumbero</h4>
+                <h5>📅 17 Mayo 2025<br>📍 Carriches (Toledo)</h5>
             </div>
             <div class="card-panel hoverable" style="text-align: center;">
-                <h5>De Tardeo</h5>
-                <p>📍 Cíjara (Badajoz)<br>📅 17 Abril 2025 · 🎤 Actuación principal</p>
+                <h4>De Tardeo</h4>
+                <h5>📅 17 Abril 2025<br>📍 Cíjara (Badajoz)<h5>
             </div>
         </amp-carousel>
     </section>
