Add next generation images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="CHACHE - Artista Flamenco Urbano">
     <meta property="og:description" content="Conoce a CHACHE, su carrera, sus últimos temas y próximos eventos.">
-    <meta property="og:image" content="images/chache-bio.jpg">
+    <meta property="og:image" content="images/chache-bio.webp">
     <meta property="og:url" content="https://chachealdeskuido.com">
     <meta property="og:site_name" content="CHACHE Oficial">
 
@@ -25,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="CHACHE - Artista Flamenco Urbano">
     <meta name="twitter:description" content="Música flamenca urbana con esencia callejera y sonido mestizo.">
-    <meta name="twitter:image" content="images/chache-bio.jpg">
+    <meta name="twitter:image" content="images/chache-bio.webp">
     <meta name="twitter:site" content="@chacheoficial">
 
     <!-- Preconnect y DNS Prefetch -->
@@ -625,7 +625,7 @@
         <div class="menu content-width">
             <div class="logo">
                 <a href="#">
-                    <amp-img src="images/FirmaChache.png" width="200" height="80" layout="fixed" alt="Logo"></amp-img>
+                    <amp-img src="images/FirmaChache.webp" width="200" height="80" layout="fixed" alt="Logo"></amp-img>
                 </a>
             </div>
             <div class="links">
@@ -672,7 +672,7 @@
             <!-- Imagen de Chache -->
             <div style="flex: 0 0 400px; max-width: 100%; text-align: center;">
                 <h2 class="titulo-estilo">🎸 Sobre mí</h2>
-                <amp-img src="images/chache-bio.jpg" width="400" height="350" layout="responsive" alt="Chache con guitarra" style="border-radius: 8px;"></amp-img>
+                <amp-img src="images/chache-bio.webp" width="400" height="350" layout="responsive" alt="Chache con guitarra" style="border-radius: 8px;"></amp-img>
             </div>
 
             <!-- Texto biográfico -->
