--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 
     <section class="hero section">
         <div class="hero-logo">
-            <amp-img src="images/logo.png" width="1024" height="1287" layout="responsive" alt="Logo"></amp-img>
+            <amp-img src="images/logo.webp" width="1024" height="1287" layout="responsive" alt="Logo"></amp-img>
         </div>
         <h1 class="titulo-estilo">CHACHE Aldeskuido</h1>
         <p>NACÍ PARA SUFRIR PERO VIVO VACILANDO</p>
