--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
         </amp-carousel>
     </section>
 
-    <section id="video" class="video-hero-section">
+    <section id="hero" class="video-hero-section">
         <div class="video-hero-wrapper">
             <amp-img src="images/chache-hero.webp" width="868" height="372" layout="responsive" alt="Chache hero" class="hero-bg"></amp-img>
 
@@ -878,11 +878,6 @@
         </div>
     </section>
 
-
-
-
-
-
     <section id="video" class="section">
         <h2 class="titulo-estilo">🎬 Videoclips</h2>
         <p style="color: var(--text-muted); margin-top: 10px;">Disfruta de mis videos musicales en Youtube</p>
@@ -911,8 +906,6 @@
             </div>
         </div>
     </section>
-
-
 
     <section id="contacto" class="section">
 
