FIX footer links

--- a/politica-privacidad/index.html
+++ b/politica-privacidad/index.html
@@ -699,12 +699,12 @@
 
     <footer class="section center-align">
         <div class="policies">
-            <a href="/politica-privacidad/">Política de Privacidad</a> ·
-            <a href="/politica-cookies/">Política de Cookies</a> ·
-            <a href="/condiciones-generales/">Condiciones Generales</a>
+            <a href="/chachealdeskuido/politica-privacidad/">Política de Privacidad</a> ·
+            <a href="/chachealdeskuido/politica-cookies/">Política de Cookies</a> ·
+            <a href="/chachealdeskuido/condiciones-generales/">Condiciones Generales</a>
         </div>
         <div class="grey-text text-lighten-1">&copy; 2025 CHACHE / FUGA DE FLAMENCOS S.L.</div>
-        <small>Desarrollado por <a href="https://instagram.com/jdelafuente88" target="_blank" rel="noopener">@jdelafuente88</a></small>
+        <small>Sitio web creado por <a href="https://instagram.com/jdelafuente88" target="_blank" rel="noopener">@jdelafuente88</a></small>
     </footer>
 </body>
 
