FIX header logo link

--- a/politica-cookies/index.html
+++ b/politica-cookies/index.html
@@ -620,7 +620,7 @@
     <header>
         <div class="menu content-width">
             <div class="logo">
-                <a href="#">
+                <a href="/chachealdeskuido/">
                     <amp-img src="../images/FirmaChache.webp" width="200" height="80" layout="fixed" alt="Logo"></amp-img>
                 </a>
             </div>
