--- a/condiciones-generales/index.html
+++ b/condiciones-generales/index.html
@@ -678,7 +678,7 @@
             <p>El Usuario se compromete a hacer un uso adecuado del sitio web y a no emplearlo para actividades ilícitas, contrarias a la buena fe o al orden público. Se abstendrá también de causar daños en los sistemas físicos o lógicos de la empresa o de terceros.</p>
 
             <h3><strong>3. Propiedad intelectual e industrial</strong></h3>
-            <p>Todos los contenidos del sitio web, incluyendo textos, imágenes, marcas, logotipos, archivos de audio y vídeo, diseño gráfico y código fuente, son titularidad exclusiva de FUGA DE FLAMENCOS S.L. o de terceros, y están protegidos por los derechos de propiedad intelectual e industrial.</p>
+            <p>Todos los contenidos del sitio web, incluyendo textos, imágenes, marcas, logotipos, archivos de audio y vídeo, diseño gráfico y código fuente, son titularidad exclusiva de CHACHE, FUGA DE FLAMENCOS S.L. o de <a href="https://instagram.com/jdelafuente88" target="_blank" rel="noopener">@jdelafuente88</a>, y están protegidos por los derechos de propiedad intelectual e industrial.</p>
 
             <h3><strong>4. Exención de responsabilidad</strong></h3>
             <p>La empresa no se hace responsable de los daños o perjuicios derivados del uso del sitio, ni de la exactitud o actualización de los contenidos que puedan ser modificados en cualquier momento sin previo aviso.</p>
