--- a/condiciones-generales/index.html
+++ b/condiciones-generales/index.html
@@ -667,7 +667,7 @@
     </section>
 
     <section id="condiciones-generales" class="section">
-        <h2 class="titulo-estilo center">📜 Condiciones Generales de Uso</h2>
+        <h2 class="titulo-estilo center">Condiciones Generales de Uso</h2>
         <div class="flow-text" style="max-width: 900px; margin: 0 auto; text-align: justify;">
             <p>La utilización del presente sitio web atribuye la condición de usuario (en adelante, el "Usuario") e implica la aceptación plena y sin reservas de todas las disposiciones incluidas en este aviso legal en la versión publicada en el momento en que el Usuario acceda al sitio.</p>
 
