--- a/politica-cookies/index.html
+++ b/politica-cookies/index.html
@@ -666,7 +666,7 @@
     </section>
 
     <section id="politica-cookies" class="section">
-        <h2 class="titulo-estilo center"><i class="fa-solid fa-cookie" style="color: #b859d8;"></i> Política de Cookies</h2>
+        <h2 class="titulo-estilo center">Política de Cookies</h2>
         <div class="flow-text" style="max-width: 1024px; margin: 0 auto; text-align: justify;">
             <p>Este sitio web utiliza cookies propias y de terceros para asegurar el correcto funcionamiento del sitio, analizar el tráfico, ofrecer contenido multimedia integrado y facilitar el acceso a redes sociales.</p>
 
