--- a/politica-privacidad/index.html
+++ b/politica-privacidad/index.html
@@ -668,7 +668,7 @@
     </section>
 
     <section id="politica-privacidad" class="section">
-        <h2 class="titulo-estilo center">🔒 Política de Privacidad</h2>
+        <h2 class="titulo-estilo center">Política de Privacidad</h2>
         <div class="flow-text" style="max-width: 900px; margin: 0 auto; text-align: justify;">
             <p><strong>FUGA DE FLAMENCOS S.L.</strong> (en adelante, "la empresa") con domicilio en España y correo electrónico de contacto oficial indicado en la sección de contacto, es responsable del tratamiento de los datos personales recogidos a través de este sitio web: <a href="https://jdelafuente88.github.io/chachealdeskuido/">https://jdelafuente88.github.io/chachealdeskuido/</a>.</p>
 
